--- a/index.html
+++ b/index.html
@@ -14,6 +14,77 @@
 
 <body>
 
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">MOS Burgers</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#menu">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#orders">Orders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#customers">Customers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#reports">Reports</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <button class="btn btn-outline-light" type="button" data-bs-toggle="modal"
+                        data-bs-target="#cartModal">
+                        Cart <span class="badge bg-danger" id="cartCount">0</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <br><br>
+    <!-- Cart Modal -->
+    <div class="row" style="margin: 2px;">
+        <div class="col-sm-8 mb-3 mb-sm-0">
+            <div class="card">
+                <div class="card-body">
+
+
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="card">
+                <div class="card-body">
+
+
+                    <h5 class="card-title">Cart</h5>
+                    <div id="cartItems" class="mb-3">
+                        <!-- Cart items will be dynamically added here -->
+                    </div>
+                    <div>
+                        <p>Items in Cart: <span id="cartCount">0</span></p>
+                        <p>Subtotal: <span id="cartSubtotal">Rs. 0.00</span></p>
+                        <p>Discount: <span id="cartDiscount">Rs. 0.00</span></p>
+                        <p>Total: <span id="cartTotal">Rs. 0.00</span></p>
+                    </div>
+                    <div class="text-end mt-3">
+                        <button id="checkoutBtn" class="btn btn-success">Checkout</button>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
