--- a/index.html
+++ b/index.html
@@ -46,12 +46,28 @@
         </div>
     </nav>
     <br><br>
+
     <!-- Cart Modal -->
     <div class="row" style="margin: 2px;">
         <div class="col-sm-8 mb-3 mb-sm-0">
             <div class="card">
                 <div class="card-body">
 
+                    <div class="card border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-header bg-transparent border-success align-">
+                            <span class="badge text-bg-danger">15%</span>
+                        </div>
+                        <div class="card-body text-success">
+                            <h5 class="card-title">Success card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                        <div class="card-footer bg-transparent border-success "> 
+                            
+                            <button class="btn btn-success text-end" onclick="addToCart('${item.code}')">
+                                Add to Cart
+                            </button></div>
+                    </div>
 
 
                 </div>
@@ -83,9 +99,6 @@
             </div>
         </div>
     </div>
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
