--- a/store.html
+++ b/store.html
@@ -66,7 +66,7 @@
                     <a class="nav-link" href="#" onclick="displayMenuItems('beverages')">Beverages</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"> <button type="button" class="btn btn-outline-info ms-xl-5" onclick="">Add new Item</button></a>
+                    <a class="nav-link"> <button type="button" id="btnAddNewItem" class="btn btn-outline-info ms-xl-5" >Add new Item</button></a>
                 </li>
             </ul>
 
@@ -91,11 +91,67 @@
         </div>
     </div>
 
+    <div class="modal fade" id="newItem" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add New Item</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="itemForm">
+                        <div class="mb-3">
+                            <label class="form-label">Category</label>
+                            <select class="form-select" id="itemCategory" required>
+                                <option value="burgers">Burgers</option>
+                                <option value="submarines">Submarines</option>
+                                <option value="fries">Fries</option>
+                                <option value="pasta">Pasta</option>
+                                <option value="beverages">Beverages</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Code</label>
+                            <input type="text" class="form-control" id="itemCode" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Name</label>
+                            <input type="text" class="form-control" id="itemName" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Price</label>
+                            <input type="number" class="form-control" id="itemPrice" step="0.01" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Discount</label>
+                            <input type="number" class="form-control" id="itemDiscount" step="0.01">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Quantity</label>
+                            <input type="number" class="form-control" id="itemQuantity" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Expire Date</label>
+                            <input type="date" class="form-control" id="itemExpireDate">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="btnCloseNewItem">Close</button>
+                    <button type="button" class="btn btn-primary" id="btnsaveItem">Save Item</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="menu-data.json" type="application/json"></script>
     <script src="db.js"></script>
     <script src="app.js"></script>
 </body>
