--- a/menu.html
+++ b/menu.html
@@ -51,7 +51,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container">
-            <a class="navbar-brand" href="#">MOS Burgers</a>
+            <a class="navbar-brand" href="index.html">MOS Burgers</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -61,7 +61,7 @@
                         <a class="nav-link" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#orders">Orders</a>
+                        <a class="nav-link" href="order.html">Orders</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#customers">Customers</a>
