--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="order.html">Orders</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#customers">Customers</a>
+                        <a class="nav-link" href="customers.html">Customers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#reports">Reports</a>
