--- a/order.html
+++ b/order.html
@@ -44,11 +44,11 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-12">
-                <div class="table-responsive">
+                <div class="table-responsive mt-5">
                     <table class="table table-striped table-hover" id="orderTable">
                         <thead>
                             <tr>
-                                <th> </th>
+                                <th></th>
                                 <th>Customer Name</th>
                                 <th>Contact No</th>
                                 <th>Items</th>
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <script src="orderScript.js"></script>
