--- a/customers.html
+++ b/customers.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Management System</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+    <style>
+        #navbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        .burger-icon {
+            color: #ff6b6b;
+        }
+    </style>
 </head>
+
 <body>
-        <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">MOS Burgers</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="menu.html">Menu</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="order.html">Orders</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="customers.html">Customers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#reports">Reports</a>
-                        </li>
-                    </ul>
-                </div>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
+        <div class="container">
+            <a class="navbar-brand" href="index.html"><i class="fas fa-hamburger burger-icon me-2"></i>MOS Burgers</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="order.html">Orders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="customers.html">Customers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#reports">Reports</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
     <div class="container mt-4">
         <!-- Header -->
@@ -40,7 +57,8 @@
         <!-- Search Bar -->
         <div class="row mb-4">
             <div class="col-md-6 offset-md-3">
-                <input type="text" id="searchInput" class="form-control" placeholder="Search by customer name..." oninput="searchCustomer()">
+                <input type="text" id="searchInput" class="form-control" placeholder="Search by customer name..."
+                    oninput="searchCustomer()">
             </div>
         </div>
 
@@ -55,13 +73,13 @@
                                     <input type="text" class="form-control" id="name" placeholder="Name" required>
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="email" class="form-control" id="email" placeholder="Email" required>
+                                    <input type="email" class="form-control" id="email" placeholder="Email">
                                 </div>
                                 <div class="col-md-6">
                                     <input type="tel" class="form-control" id="phone" placeholder="Phone" required>
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="text" class="form-control" id="address" placeholder="Address" required>
+                                    <input type="text" class="form-control" id="address" placeholder="Address">
                                 </div>
                                 <div class="col-12 text-center">
                                     <button type="submit" class="btn btn-primary">Add Customer</button>
@@ -103,4 +121,5 @@
     <!-- Your custom JS -->
     <script src="customerScript.js"></script>
 </body>
+
 </html>
