--- a/order.html
+++ b/order.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOS Burgers > Order List</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         #navbar {
             position: fixed;
@@ -12,13 +13,16 @@
             width: 100%;
             z-index: 1000;
         }
+        .burger-icon {
+            color: #ff6b6b;
+        }
 
     </style>
 </head>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">MOS Burgers</a>
+            <a class="navbar-brand" href="index.html"><i class="fas fa-hamburger burger-icon me-2"></i>MOS Burgers</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,7 +35,7 @@
                         <a class="nav-link" href="order.html">Orders</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#customers">Customers</a>
+                        <a class="nav-link" href="customers.html">Customers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#reports">Reports</a>
