--- a/customers.html
+++ b/customers.html
@@ -20,14 +20,19 @@
         .burger-icon {
             color: #ff6b6b;
         }
+
+        
     </style>
 </head>
+
 
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><i class="fas fa-hamburger burger-icon me-2"></i>MOS Burgers</a>
+            <a class="navbar-brand" href="index.html">
+                <i class="fas fa-hamburger burger-icon me-2"></i> MOS Burgers
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,20 +45,28 @@
                         <a class="nav-link" href="order.html">Orders</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="Inventory.html">Inventory</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="customers.html">Customers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#reports">Reports</a>
+                        <a class="nav-link" href="reports.html">Reports</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
+<br><br>
     <div class="container mt-4">
         <!-- Header -->
-        <h2 class="text-center mb-4">Customer Management System</h2>
-
+        <div class="row mb-4">
+            <div class="col">
+                <h2 class="border-bottom pb-2 text-center">
+                    Customer Management System
+                </h2>
+            </div>
+        </div>
         <!-- Search Bar -->
         <div class="row mb-4">
             <div class="col-md-6 offset-md-3">
