--- a/order.html
+++ b/order.html
@@ -22,7 +22,9 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><i class="fas fa-hamburger burger-icon me-2"></i>MOS Burgers</a>
+            <a class="navbar-brand" href="index.html">
+                <i class="fas fa-hamburger burger-icon me-2"></i> MOS Burgers
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,10 +37,13 @@
                         <a class="nav-link" href="order.html">Orders</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="Inventory.html">Inventory</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="customers.html">Customers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#reports">Reports</a>
+                        <a class="nav-link" href="reports.html">Reports</a>
                     </li>
                 </ul>
             </div>
