Enhance UI with background styling, footer addition, and button color update; fix script reference in HTML files

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             padding-top: 70px;
             background-color: #f8f9fa;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-image: url('Designer.jpeg');
+            background-size: contain;
+            background-position: initial;
+            background-repeat: initial;
+            background-color: rgba(0, 0, 0, 0.08);
+            background-blend-mode: overlay;
+            background-attachment: scroll;
+            background-clip: border-box;
         }
 
         .hero-section {
@@ -123,7 +131,7 @@
         </div>
 
         <!-- Quick Stats Row -->
-        <div class="row mb-4">
+        <!-- <div class="row mb-4">
             <div class="col-md-3">
                 <div class="stat-card">
                     <i class="fas fa-utensils"></i>
@@ -152,7 +160,7 @@
                     <p class="text-muted">Today's Sales</p>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Quick Actions -->
         <div class="card mb-4">
@@ -333,8 +341,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5><i class="fas fa-hamburger burger-icon me-2"></i>MOS Burgers POS System</h5>
-                    <p>A digital solution for efficient store management, order processing, and customer service.</p>
+                    <h5><i class="fas fa-hamburger burger-icon me-2"></i>MOS Burgers</h5>
+                    <p>Burger Street, Colombo, Sri Lanka</p>
+                    <p>+94 112 888 888</p>
+                    <p>www.mosburgers.lk</p>
+                    <p><a href="#">contact@mosburgers.lk</a></p>
+
+                    <a href="#" class="text-white me-2"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="text-white me-2"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="text-white me-2"><i class="fab fa-twitter"></i></a>
+
                 </div>
                 <div class="col-md-3">
                     <h5>Quick Links</h5>
@@ -358,7 +374,7 @@
             <hr class="my-4 bg-light">
             <div class="row">
                 <div class="col-md-6">
-                    <p>© 2025 MOS Burgers. All rights reserved.</p>
+                    <p class="mb-0">&copy; 2025 MOS Burgers. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <p>Developed by Nugitha Disas</p>
@@ -367,7 +383,7 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-    <script src="itemScripts.js"></script>
+    <script src="inventryScripts.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             menuItemCount();
