--- a/menu.html
+++ b/menu.html
@@ -58,6 +58,20 @@
         .burger-icon {
             color: #ff6b6b;
         }
+        body {
+            padding-top: 70px;
+            background-color: #f8f9fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-image: url('Designer.jpeg');
+            background-size: contain;
+            background-position: initial;
+            background-repeat: initial;
+            background-color: rgba(0, 0, 0, 0.08);
+            background-blend-mode: overlay;
+            background-attachment: scroll;
+            background-clip: border-box;
+        }
+
     </style>
 </head>
 <!-- Navigation Bar -->
@@ -82,7 +96,7 @@
                     <a class="nav-link" href="customers.html">Customers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#reports">Reports</a>
+                    <a class="nav-link" href="reports.html">Reports</a>
                 </li>
             </ul>
             <div class="d-flex">
@@ -173,7 +187,11 @@
         </div>
     </div>
 </div>
-
+<footer class="bg-dark text-white text-center py-3 mt-5">
+    <div class="container">
+        <p class="mb-0">&copy; 2025 MOS Burgers. All rights reserved.</p>
+    </div>
+</footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="menuScript.js"></script>
