--- a/Inventory.html
+++ b/Inventory.html
@@ -18,6 +18,19 @@
         .burger-icon {
             color: #ff6b6b;
         }
+        body {
+            background-color: #f8f9fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-image: url('Designer.jpeg');
+            background-size: contain;
+            background-position: initial;
+            background-repeat: initial;
+            background-color: rgba(0, 0, 0, 0.08);
+            background-blend-mode: overlay;
+            background-attachment: scroll;
+            background-clip: border-box;
+        }
+
     </style>
 </head>
 
@@ -181,7 +194,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-    <script src="itemScripts.js"></script>
+    <script src="inventryScripts.js"></script>
 </body>
 
 </html>
