--- a/customers.html
+++ b/customers.html
@@ -20,6 +20,19 @@
         .burger-icon {
             color: #ff6b6b;
         }
+        body {
+            background-color: #f8f9fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-image: url('Designer.jpeg');
+            background-size: contain;
+            background-position: initial;
+            background-repeat: initial;
+            background-color: rgba(0, 0, 0, 0.08);
+            background-blend-mode: overlay;
+            background-attachment: scroll;
+            background-clip: border-box;
+        }
+
 
         
     </style>
@@ -128,7 +141,12 @@
             </div>
         </div>
     </div>
-
+    
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        <div class="container">
+            <p class="mb-0">&copy; 2025 MOS Burgers. All rights reserved.</p>
+        </div>
+    </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <!-- Your custom JS -->
