--- a/order.html
+++ b/order.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOS Burgers > Order List</title>
+    <title>MOS Burgers > Order</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
@@ -15,6 +15,18 @@
         }
         .burger-icon {
             color: #ff6b6b;
+        }
+        body {
+            background-color: #f8f9fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-image: url('Designer.jpeg');
+            background-size: contain;
+            background-position: initial;
+            background-repeat: initial;
+            background-color: rgba(0, 0, 0, 0.08);
+            background-blend-mode: overlay;
+            background-attachment: scroll;
+            background-clip: border-box;
         }
 
     </style>
@@ -54,27 +66,32 @@
         <div class="row">
             <div class="col-12">
                 <div class="table-responsive mt-5">
-                    <table class="table table-striped table-hover" id="orderTable">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Customer Name</th>
-                                <th>Contact No</th>
-                                <th>Items</th>
-                                <th>Discount</th>
-                                <th>Total Price</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody id="orderTableBody">
-                           
-                        </tbody>
-                    </table>
+                        <table id="orderTable" class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Customer Name</th>
+                                    <th>Contact No</th>
+                                    <th>Items</th>
+                                    <th>Discount</th>
+                                    <th>Total Price</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="orderTableBody">
+                                <!-- Orders will be dynamically inserted here -->
+                            </tbody>
+                        </table>
                 </div>
             </div>
         </div>
     </div>
-
+    
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        <div class="container">
+            <p class="mb-0">&copy; 2025 MOS Burgers. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
